cli/test/fixtures/bad/pure_black_text.dart
// Bad: pure black text
final s = TextStyle(color: Colors.black);
